@@ -1,40 +1,26 @@
 package MooseX::GlobRef::Meta::ClassTest;
 
-use Test::Unit::Lite;
-use parent 'Test::Unit::TestCase';
+use parent 'MooseX::GlobRef::ObjectBaseTest';
 
-use Test::Assert ':all';
-
-use Scalar::Util 'reftype';
-
+use constant test_class => (__PACKAGE__ . '::TestClass');
 
 {
-    package MooseX::GlobRef::Meta::ClassTest::Test1;
+    package MooseX::GlobRef::Meta::ClassTest::TestClass;
 
     use metaclass 'MooseX::GlobRef::Meta::Class';
 
     use Moose;
 
-    has field => ( is => 'rw' );
-};
+    has field => (
+        is      => 'rw',
+        clearer => 'clear_field',
+        default => 'default',
+        lazy    => 1,
+    );
 
-
-sub test___isa {
-    my $self = shift;
-    my $obj = MooseX::GlobRef::Meta::ClassTest::Test1->new;
-    assert_not_null($obj);
-    assert_true($obj->isa('MooseX::GlobRef::Meta::ClassTest::Test1'));
-    assert_equals('GLOB', reftype($obj));
-};
-
-sub test_accessor {
-    my $self = shift;
-    my $obj = MooseX::GlobRef::Meta::ClassTest::Test1->new(field => $$);
-    assert_not_null($obj);
-    assert_true($obj->isa('MooseX::GlobRef::Meta::ClassTest::Test1'));
-    assert_equals($$, $obj->field);
-    assert_equals(1, $obj->field(1));
-    assert_equals(1, $obj->field);
+    has weak_field => (
+        is      => 'rw',
+    );
 };
 
 1;
